# rCommon

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  META_AUDIT.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md
docs/: DESIGN_SYSTEM.md  EMBEDDED_DOCS.md  VISUAL_STANDARDS.md
src/: clipboard.rs  core.rs  error.rs  event_log.rs  game.rs  guard.rs  gui.rs  interface.rs  lib.rs  lifecycle.rs  notification.rs  platform.rs  reg.rs  reg_stub.rs  rgb.rs  role.rs  screensaver_runner.rs  screensaver_runtime.rs  service.rs  sys_info.rs  widgets.rs  win32.rs  win32_stub.rs  window.rs
src/apps/: daemon.rs  event_log.rs  guard.rs  identity.rs  notification.rs  panic.rs  power_sync.rs  scaffold.rs  service.rs  tui_bootstrap.rs  window_position.rs  window_relaunch.rs  window_style.rs  window_visibility.rs
src/apps/window/: mod.rs  types.rs  window_fallback.rs  window_linux.rs  window_macos.rs  window_win.rs
src/build_resources/: mod.rs
src/core/: formatting.rs  mod.rs  screen_palette.rs  screensaver.rs
src/interface/: mod.rs
src/interface/api/: mod.rs
src/interface/api/platform/: win32_ipc.rs
src/interface/cli/: doctor.rs  scaffold.rs
src/interface/gui/: egui_helpers.rs  mod.rs
src/interface/tui/: constants.rs  layout.rs  markdown.rs  markdown_viewer.rs  mod.rs  screensaver.rs  status.rs  text.rs  theme.rs
src/interface/tui/design/: colors.rs  markdown_viewer.rs  mod.rs
src/interface/tui/effects/: dimensions.rs  falling_glyphs.rs  logo.rs  mod.rs
src/interface/tui/widgets/: effect_preview.rs  gauge.rs  layout_guard.rs  list.rs  mod.rs  mouse_selection.rs  tabs.rs  textbox.rs  title_banner.rs
src/lifecycle/: mod.rs
src/lifecycle/background/: daemon.rs  event_log.rs  file_log.rs  mod.rs  notification.rs  service.rs  worker.rs
src/lifecycle/foreground/: console.rs  guard.rs  identity.rs  mod.rs  power_sync.rs  tui_bootstrap.rs
src/lifecycle/foreground/window/: drag_to_move.rs  mod.rs  style.rs  visibility.rs
src/platform/: mod.rs
src/platform/native/: config.rs  gpu.rs  mod.rs  monitors.rs  reg.rs
src/platform/native/sys_info/: mod.rs  windows.rs
src/rgb/: controller.rs  protocol.rs
src/role/: mod.rs
src/role/application/: formatting.rs  game.rs  mod.rs  packages.rs  palette.rs
src/role/application/rgb/: protocol.rs
src/role/application/scenes/: mod.rs
src/role/application/scenes/beams/: effect.rs  mod.rs  render.rs  state.rs
src/role/application/scenes/bhop/: animation.rs
src/role/application/scenes/bounce/: mod.rs  render.rs  state.rs
src/role/application/scenes/bursts/: mod.rs  render.rs  state.rs
src/role/application/scenes/chaos/: mod.rs  render.rs  state.rs
src/role/application/scenes/cosmos/: mod.rs  render.rs  state.rs
src/role/application/scenes/disco/: mod.rs  render.rs  state.rs
src/role/application/scenes/fire/: drawing.rs  effect.rs
src/role/application/scenes/fireflies/: drawing.rs  effect.rs
src/role/application/scenes/fireworks/: drawing.rs
src/role/application/scenes/flame/: mod.rs  render.rs  state.rs
src/role/application/scenes/glyphs/: mod.rs  render.rs  state.rs
src/role/application/scenes/gnats/: mod.rs  render.rs  state.rs
src/role/application/scenes/life/: drawing.rs  update_core.rs
src/role/application/scenes/matrix/: effect.rs
src/role/application/scenes/party/: audio.rs  drawing.rs
src/role/application/scenes/pour/: drawing.rs  effect.rs  update_core.rs
src/role/application/scenes/storm/: mod.rs  render.rs  state.rs
src/role/application/scenes/unstable/: drawing.rs  effect.rs
src/screensaver_runtime/: mod.rs
src/screensavers/: beams.rs  bounce.rs  bursts.rs  chaos.rs  cosmos.rs  disco.rs  flame.rs  glyphs.rs  gnats.rs  runtime.rs  storm.rs
src/sys_info/: linux.rs  windows.rs
src/toolkit/: config.rs  mod.rs  monitors.rs  packages.rs  platform.rs  platform_embedded.rs  platform_mobile.rs  platform_web.rs  sys_info.rs  sys_info_glyphs.rs  sys_info_linux.rs  sys_info_windows.rs  wgpu_renderer.rs
src/toolkit/wlan/: mod.rs
src/ui/: accent_gauge.rs  accent_list.rs  colors.rs  egui_helpers.rs  gui_native.rs  markdown_viewer.rs  screensaver_renderer.rs  tabs.rs  textbox.rs
src/ui/effects/: dimensions.rs  falling_comets.rs  falling_droplets.rs  falling_glyphs.rs  flowing_blocks.rs  flowing_particles.rs  logo.rs  mod.rs  pulled_blocks.rs  pulled_particles.rs  pulsing_glyphs.rs  pulsing_particles.rs  pulsing_waves.rs  rising_flames.rs  rising_glyphs.rs
tests/: design_facade.rs  scenes_facade.rs  screensaver_runtime_facade.rs  sys_info_tests.rs  taxonomy_compliance.rs
