[package]
name = "rcommon"
version = "1.1.0"
authors = ["Jeryd <jerydleuck@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Shared utility library, stubs, and TUI widgets for the rApps ecosystem"

[dependencies]
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
sysinfo = { version = "0.30", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.56.0", optional = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_EventLog",
    "Win32_System_Services",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Ole",
], optional = true }
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
], optional = true }

[features]
default = ["widgets", "sys-info", "rgb", "clipboard", "service", "event-log", "notification", "window", "reg"]
widgets = ["dep:ratatui", "dep:crossterm"]
sys-info = ["dep:sysinfo", "dep:windows-sys", "dep:winreg"]
rgb = []

# Granular platform-agnostic OS integration features
clipboard = ["dep:windows-sys"]
service = ["dep:windows-sys"]
event-log = ["dep:windows-sys"]
notification = ["dep:windows"]
window = ["dep:windows-sys"]
reg = ["dep:winreg", "dep:windows-sys"]

# Backwards compatibility legacy feature
win32 = ["clipboard", "service", "event-log", "notification", "window", "reg", "sys-info"]

[[bin]]
name = "test_rgb"
path = "src/bin/test_rgb.rs"
required-features = ["rgb"]

[[bin]]
name = "rpack"
path = "src/bin/rpack.rs"
