[package]
name = "rcommon"
version = "3.0.18"
authors = ["Jeryd <jerydleuck@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Shared utility library, stubs, and TUI widgets for the rApps ecosystem"

[dependencies]
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
sysinfo = { version = "0.30", default-features = false, optional = true }
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
wgpu = { version = "24.0.0", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.56.0", optional = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_EventLog",
    "Win32_System_Services",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Ole",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Pipes",
    "Win32_NetworkManagement_WiFi",
], optional = true }
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
], optional = true }

[features]
default = ["interface-tui", "interface-api", "lifecycle-foreground", "lifecycle-background", "platform-native", "role-system", "role-application"]

# Windows target helpers
windows-sys = ["dep:windows-sys"]

# Taxonomy-aligned features (preferred for new code)
interface-tui = ["widgets", "effects"]
interface-gui = ["gui"]
interface-api = ["windows-sys"]
lifecycle-foreground = ["window"]
lifecycle-background = ["service", "event-log", "notification", "clipboard"]
platform-native = ["sys-info", "reg"]
platform-gpu = ["gpu"]
role-system = ["sys-info", "reg", "service", "event-log"]
role-application = ["rgb"]

# Granular / legacy (kept for compatibility with existing consumers)
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
widgets = ["dep:ratatui", "dep:crossterm"]
sys-info = ["dep:sysinfo", "windows-sys", "dep:winreg"]
rgb = []
clipboard = ["windows-sys"]
service = ["windows-sys"]
event-log = ["windows-sys"]
notification = ["dep:windows"]
window = ["windows-sys"]
reg = ["dep:winreg", "windows-sys"]
gui = ["dep:eframe", "dep:egui"]
effects = ["sys-info"]

[[bin]]
name = "rgb_diagnostic"
path = "src/bin/rgb_diagnostic.rs"
required-features = ["rgb"]

[[bin]]
name = "rpack"
path = "src/bin/rpack.rs"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

